# SPDX-FileCopyrightText: Copyright (c) 2025 Alexander Holler <holler@ahsoftware.de>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "sebattery"
version = "1.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", default-features = false, features = ["macros", "rt"] }
tokio-modbus = { version = "^0.16", default-features = false, features = ["tcp"] }
